fix invisible reveal buttons wrapping on desktop, fix not removing placeholder on backspace

--- a/crossword-styles.css
+++ b/crossword-styles.css
@@ -116,9 +116,6 @@ li.highlight {
   pointer-events: none;
 }
 
-#clues {
-  max-width: 300px;
-}
 ul {
   padding: 0;
   margin-top: 0;
